Fix VSCode Python env creation steps

--- a/04-dependencies.html
+++ b/04-dependencies.html
@@ -57,7 +57,7 @@
         <p>
             Si vous utilisez Visual Studio Code, vous pouvez configurer l'environnement virtuel en ouvrant le
             panneau de commande (<span class="keyboard-key">Ctrl</span> + <span class="keyboard-key">Shift</span> +
-            <span class="keyboard-key">P</span>) et en sélectionnant "Python: Select Interpreter".
+            <span class="keyboard-key">P</span>) et en sélectionnant "Python: Create Environment".
         </p>
         <footer>
             <a href="https://code.visualstudio.com/docs/python/environments#_creating-environments" class="info" target="_blank">
