--- a/07-functions.html
+++ b/07-functions.html
@@ -54,7 +54,7 @@ print(result)</code></pre>
     </section>
 
     <section>
-        <h3>Exerice</h3>
+        <h3>Exercice</h3>
         <p>
             Écrire une fonction Python permettant de retourner le niveau (notice, warn, error...) d'une ligne de log Apache.
         </p>
